# airflow_open_weather_api

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
config/: airflow.cfg
dags/: open_weather_dag.py
scripts/: airflow-setup.sh  cleanup.sh  fetch-example-data.sh
