[project]
name = "airflow-open-weather-api"
version = "0.1.0"
description = "An Apache Airflow project to fetch and process weather data from OpenWeather API."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "apache-airflow==3.1.3",
    "joblib>=1.5.2",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
]
